# hackathon-crawlguard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  basic_fields.csv  docker-compose.yml  env.example  great_expectation_functions.json  great_expectations_docs.txt  init.sql  pyproject.toml  pytest.ini  run_tests.py  test_validation.csv
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: data_validation.py  datasets.py  health.py  projects.py  rules.py
app/core/: config.py  database.py  project_summary.py  prompts.py  rule_generator.py  slack.py
app/core/data_quality/: base_validator.py  csv_validator.py  file_loader.py  json_validator.py  validator_factory.py
app/models/: dataset.py  project.py  rule.py  suggested_rules.py  validation_models.py
app/schemas/: dataset.py  health.py  project.py  rule.py  validation.py
tests/: test_rule_generation_service.py  test_slack_integration.py
tests/integration/: conftest.py  test_datasets.py  test_projects.py  test_rules.py
